Docker環境でViteのHMRを動作させるための設定を追加

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   app:
     build:
@@ -11,9 +9,12 @@ services:
     volumes:
       - .:/var/www/html
       - ./storage:/var/www/html/storage
-      - ./bootstrap/cache:/var/www/html/bootstrap/cache
+      - bootstrap_cache:/var/www/html/bootstrap/cache
+      - node_modules:/var/www/html/node_modules
+      - vendor:/var/www/html/vendor
     ports:
       - "8000:8000"
+      - "5173:5173"
     networks:
       - laravel
     depends_on:
@@ -49,3 +50,6 @@ networks:
 volumes:
   dbdata:
     driver: local
+  node_modules:
+  vendor:
+  bootstrap_cache:
