feat: Vite開発サーバーの自動起動対応

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,6 @@ services:
       - vendor:/var/www/html/vendor
     ports:
       - "8000:8000"
-      - "5173:5173"
     networks:
       - laravel
     depends_on:
@@ -26,6 +25,22 @@ services:
       - DB_USERNAME=laravel
       - DB_PASSWORD=secret
     command: php artisan serve --host=0.0.0.0 --port=8000
+
+  vite:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: laravel_vite
+    restart: unless-stopped
+    working_dir: /var/www/html
+    volumes:
+      - .:/var/www/html
+      - node_modules:/var/www/html/node_modules
+    ports:
+      - "5173:5173"
+    networks:
+      - laravel
+    command: npm run dev
 
   db:
     image: mysql:8.0
