feat: Chirpの編集・削除機能を追加
- ChirpControllerにupdate/destroyアクションを実装
- Chirp編集ページ（chirps/edit.blade.php）を追加
- chirpコンポーネントに編集/削除ボタンを追加
- 編集済み表示（edited）を追加
- ルーティングを更新

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,7 @@
 {
-    "php.version": "8.3",
-    "Laravel.phpEnvironment": "local"
+	"php.version": "8.3",
+	"Laravel.phpEnvironment": "local",
+	"files.associations": {
+		"*.css": "tailwindcss"
+	}
 }
